feat(korealu): 修复代码问题,完善单元测试
修复代码问题,完善单元测试

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "analytics-tracker-sdk",
+  "type": "module",
   "version": "1.0.0",
   "description": "一个功能强大的前端数据埋点 SDK，支持自动埋点、手动埋点、批量上报等特性",
   "main": "dist/index.js",
@@ -14,7 +15,10 @@
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublishOnly": "npm run lint && npm run test && npm run build",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "analytics",
@@ -23,8 +27,23 @@
     "数据统计",
     "前端监控"
   ],
-  "author": "",
+  "author": {
+    "name": "korealu",
+    "email": "korealu@foxmail.com"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/korealu/analytics-tracker-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/korealu/analytics-tracker-sdk/issues"
+  },
+  "homepage": "https://github.com/korealu/analytics-tracker-sdk#readme",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
@@ -32,6 +51,7 @@
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^29.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "commitizen": "^4.3.1",
@@ -42,9 +62,11 @@
     "prettier": "^2.0.0",
     "rollup": "^3.0.0",
     "ts-jest": "^29.0.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^29.7.0",
     "uuid": "^9.0.0"
   }
 }
